--- a/Project.toml
+++ b/Project.toml
@@ -5,13 +5,7 @@ DiffEqDevTools = "f3b72e0c-5b89-59e1-b016-84e28bfd966d"
 DiffEqProblemLibrary = "a077e3f3-b75c-5d7f-a0c6-6bc4c8ec64a9"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
-JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
-MakieTeX = "6d554a22-29e7-47bd-aee5-0c5f06619414"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProbNumDiffEq = "bf3e78b0-7d74-48a5-b855-9609533b56a5"
-Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
-ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
-UnicodeFun = "1cfade01-22cf-5700-b092-accc4b62d6e1"
