--- a/Project.toml
+++ b/Project.toml
@@ -11,5 +11,6 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProbNumDiffEq = "bf3e78b0-7d74-48a5-b855-9609533b56a5"
+ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 SciPyDiffEq = "505e40e9-d84e-434c-8501-7161967c02cb"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
